src/test/deca/syntax/invalid/our_synt_tests/robin-test10-invSymb.deca
// Trying with not defined character "~" 

{
int i = 1 ~ 2;
}
